# http_parse

./: BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build_libcxx.sh  cmake_build.sh  task01.md  test_simple  test_simple.cpp  test_simple_compilation.cpp
cmake/: http_parse-config.cmake.in
debug/: debug_malformed.cpp  debug_response.cpp  debug_response_detailed.cpp  debug_response_fixed.cpp  debug_test.cpp
example/: CMakeLists.txt  Makefile  README.md  basic_http1_parsing.cpp  comprehensive_example.cpp  cpp23_features.cpp  http1_example.cpp  http2_connection.cpp  http2_example.cpp  incremental_parsing.cpp  version_detection.cpp
include/: http_parse.hpp
include/http_parse/: README.md  buffer.hpp  builder.hpp  core.hpp  encoder.hpp  http_parse.hpp  parser.hpp
include/http_parse/detail/: buffer_impl.hpp  builder_impl.hpp  core_impl.hpp  encoder_impl.hpp  hpack.hpp  hpack_impl.hpp  parser_impl.hpp
include/http_parse/v1/: concepts.hpp  encoder.hpp  encoder_impl.hpp  parser.hpp  parser_impl.hpp
include/http_parse/v2/: concepts.hpp  encoder.hpp  encoder_impl.hpp  frame_processor.hpp  frame_processor_impl.hpp  parser.hpp  parser_impl.hpp  stream_manager.hpp  types.hpp
tests/: CMakeLists.txt  benchmark_tests.cpp  stress_tests.cpp  test_buffer.cpp  test_hpack.cpp  test_http1_builder.cpp  test_http1_encoder.cpp  test_http1_parser.cpp  test_http2_frame_processor.cpp  test_http2_stream_manager.cpp  test_http2_types.cpp  test_main.cpp  test_unified_api.cpp
